--- a/package.json
+++ b/package.json
@@ -1,17 +1,31 @@
 {
-  "author": "Ben Hockey <neonstalwart@gmail.com>",
-  "name": "trek",
-  "description": "data migration",
-  "version": "0.0.0",
-  "homepage": "http://neonstalwart.github.com/trek",
-  "repository": {
-    "type": "git",
-    "url": "git://github.com/neonstalwart/trek.git"
-  },
-  "dependencies": {},
-  "devDependencies": {},
-  "optionalDependencies": {},
-  "engines": {
-    "node": "*"
-  }
+	"author": "Ben Hockey <neonstalwart@gmail.com>",
+	"name": "trek",
+	"description": "data migration",
+	"version": "0.0.0",
+	"homepage": "http://neonstalwart.github.com/trek",
+	"repository": {
+		"type": "git",
+		"url": "git://github.com/neonstalwart/trek.git"
+	},
+	"main": "index.js",
+	"bin": {
+		"trek": "bin/cli.js"
+	},
+	"licenses": [
+		{
+			"type": "BSD",
+			"url": "https://github.com/neonstalwart/trek/blob/master/LICENSE"
+		}
+	],
+	"dependencies": {
+		"optimist": "0.3.x"
+	},
+	"devDependencies": {
+		"test": ">=0.4.3"
+	},
+	"optionalDependencies": {},
+	"engines": {
+		"node": "*"
+	}
 }
